--- a/RandomNumber/RandomNumber/RandomNumber.csproj
+++ b/RandomNumber/RandomNumber/RandomNumber.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7221D77B-9695-4805-BB9C-EB576F654D06}</ProjectGuid>
+    <ProjectGuid>{F52B8781-A93F-42F2-B0E7-3C691BE89FBE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>guessGameZach</RootNamespace>
-    <AssemblyName>guessGameZach</AssemblyName>
+    <RootNamespace>RandomNumber</RootNamespace>
+    <AssemblyName>RandomNumber</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,16 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GuessGame.cs">
+    <Compile Include="randomnumbergen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GuessGame.Designer.cs">
-      <DependentUpon>GuessGame.cs</DependentUpon>
+    <Compile Include="randomnumbergen.Designer.cs">
+      <DependentUpon>randomnumbergen.cs</DependentUpon>
     </Compile>
-    <Compile Include="guessG.cs" />
+    <Compile Include="RBG.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GuessGame.resx">
-      <DependentUpon>GuessGame.cs</DependentUpon>
+    <EmbeddedResource Include="randomnumbergen.resx">
+      <DependentUpon>randomnumbergen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -80,10 +80,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\checkmark.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\red_x.png" />
+    <None Include="Resources\dice.jpg.scaled1000.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
