--- a/Rock, Paper, Scissors zach/Rock, Paper, Scissors zach/Rock, Paper, Scissors zach.csproj
+++ b/Rock, Paper, Scissors zach/Rock, Paper, Scissors zach/Rock, Paper, Scissors zach.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7221D77B-9695-4805-BB9C-EB576F654D06}</ProjectGuid>
+    <ProjectGuid>{E80584DC-A0E2-4F32-80E6-FE17E247CBCA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>guessGameZach</RootNamespace>
-    <AssemblyName>guessGameZach</AssemblyName>
+    <RootNamespace>Rock__Paper__Scissors_zach</RootNamespace>
+    <AssemblyName>Rock, Paper, Scissors zach</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,17 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GuessGame.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GuessGame.Designer.cs">
-      <DependentUpon>GuessGame.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="guessG.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GuessGame.resx">
-      <DependentUpon>GuessGame.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -64,7 +61,6 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,12 +74,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\checkmark.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\red_x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
